# AIlen-speakin

./: .gitignore  CLAUDE.md  pyproject.toml  代辦.md  指令.md  結構及技術棧.md  規則.md
.github/workflows/: ci.yml
core/bus/: __init__.py
core/rtc/: __init__.py
core/stage/: __init__.py
deploy/dev/: gateway.sh  livekit.sh  vllm_mt.sh
docs/: index.html  site.js  styles.css
frontend/: package-lock.json  package.json  tsconfig.base.json
frontend/apps/viewer/: index.html  package.json  vite.config.ts
frontend/apps/viewer/src/: App.tsx  app.css
pipelines/: default.yaml
schemas/: CHANGELOG.md  events.py  events.schema.json
services/gateway/: app.py
services/runner/: __main__.py
services/viewer/: __main__.py
stages/mt_vllm/: manifest.yaml  stage.py
stages/stt_whisperlive/: manifest.yaml  stage.py
stages/tts_cosyvoice2/: manifest.yaml  stage.py
tests/replay/: test_e2e_stt_mt.py  test_e2e_tts.py  test_livekit_stt.py  test_livekit_tts.py  test_stt_replay.py
tests/unit/: test_events.py  test_mt_guard.py  test_runner_routes.py  test_tombstone.py
