[project]
name = "speakin"
version = "0.1.0"
description = "SpeakIn — 多對多即時語音翻譯管線"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "nats-py",
    "pyyaml",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
stt = [
    "faster-whisper",   # 需要 GPU；CI 不裝
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E741"]

# venv 在本機 NVMe（/home/a0935951152/speakin-venv，專案根目錄 .venv 是其 symlink）
# 安裝：uv pip install --python .venv/bin/python -e . --group dev --group stt
